Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.12.0
Description
The precision shouldn't be higher than 38, but 39 is happily accepted currently:
>>> ty = pa.decimal128(39, 0) >>> arr = pa.array([2**127], type=ty) >>> arr <pyarrow.lib.Decimal128Array object at 0x7f9b89444138> [ -170141183460469231731687303715884105728 ]
Attachments
Issue Links
- Blocked
-
ARROW-4569 [Gandiva] validate that the precision/scale are within bounds
-
- Closed
-
- supercedes
-
ARROW-3904 [C++/Python] Validate scale and precision of decimal128 type
-
- Resolved
-
- links to