ARROW-4563: [Python] Validate decimal128() precision input

Also add a debug check on the C++ side.