cpp/src/arrow/type.h
@@ -550,8 +550,7 @@ class ARROW_EXPORT Decimal128Type : public DecimalType {
  public:
   static constexpr Type::type type_id = Type::DECIMAL;
 
-  explicit Decimal128Type(int32_t precision, int32_t scale)
-      : DecimalType(16, precision, scale) {}
+  explicit Decimal128Type(int32_t precision, int32_t scale);
 
   Status Accept(TypeVisitor* visitor) const override;
   std::string ToString() const override;
